# adventofcode

./: .gitignore  Cargo.toml  README.md  adventofcode.cabal  package.yaml  performance-cgroup.txt  performance-getrusage.txt  performance.txt
app/: Main.hs
comparison/: .gitignore  README.md  day12.rs  day16.rs  day22.rs  day23.rs
src/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day16b.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Utils.hs  lib.rs  main.rs
src/resource/: cgroup.rs  getrusage.rs  mod.rs  poll.rs
src/utils/: day13.rs  day19.rs  day23.rs  day24.rs  day7.rs  mod.rs
