[package]
name = "adventofcode-2022"
version = "0.1.0"
edition = "2021"
default-run = "adventofcode-2022"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.68", features = ["backtrace"] }
clap = { version = "4.0.32", features = ["derive"] }
nix = { version = "0.26.1", features = ["resource", "process", "fs"] }
rand = "0.8.5"
zbus = "3.6.2"
